fix menu on mobile

--- a/src/styles/partials/core.scss
+++ b/src/styles/partials/core.scss
@@ -1,7 +1,8 @@
 @import '../modules/variables';
-//Headings
 body {
   -webkit-font-smoothing: antialiased;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 //Highlight
